--- a/index.html
+++ b/index.html
@@ -54,12 +54,11 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<span class="date"></span>
+									<h2><a href="#">Why choose BrainWerkz<br />
+									</a></h2>
+									<p><br>John Richardson has been working in IT for nearly 20 years, in various industries such as Insurance, Hospitality, Education, and eCommerce.</br>
+									<br>He has certifications in Security, Networking, Project Management, and ITIL</br></p>						
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions">
